tooling/nargo_cli/tests/snapshots/execution_success/bench_2_to_17/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/43GQQoAAAABQcr/38xRuZjaWmIxqf5lZ82FJUwAAAA=",
  "debug_symbols": "dY/RCoMwDEX/Jc990A334K+MIbFGKYS2xFYY4r8vim4y8Cm9OT2XdoaO2jw0zvdhhPo5QyuO2Q0NB4vJBa/beTFwxCYJka7gxNWKKOQT1D4zG5iQ83ZpjOi3mVCUFgbIdzq1sHdM62kxP7u4VsvbfZfLR/XVK/VfmtA6+X/xhOKwZdpjn7090fSOBzl+HCVY6rLQ2rQx7f4A",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
