tooling/nargo_cli/tests/snapshots/execution_success/bench_2_to_17/execute__tests__force_brillig_false_inliner_9223372036854775807_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: poseidon2 is private and not visible from the current module
  ┌─ src/main.nr:1:16
  │
1 │ use std::hash::poseidon2;
  │                --------- poseidon2 is private
  │

warning: Poseidon2 is private and not visible from the current module
  ┌─ src/main.nr:6:30
  │
6 │     let mut val = poseidon2::Poseidon2::hash(ped_input, len);
  │                              --------- Poseidon2 is private
  │

warning: hash is private and not visible from the current module
  ┌─ src/main.nr:6:41
  │
6 │     let mut val = poseidon2::Poseidon2::hash(ped_input, len);
  │                                         ---- hash is private
  │
