tooling/nargo_cli/tests/snapshots/execution_success/bench_2_to_17/execute__tests__force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9Vay47jRBQtx3E6j3Yn6UyjkUAg8QV2x+k0u0g0KyQ2CImtJzP9CbBg429AYovEjj0bhMSWr0BiwV8gIZEKdZPj45tq94xrHiWNqlx1677vqar0RObYItf36dsoNBvXZ6/W8g55ZaqiviY0H7vByH33YD3u0NgRye2S/21W3IwU+zrUfzlyPEP6R3gG4J+dOT6fVUf+bIttqfvGHJI9w92/c3McT914RHtCxDag77OFon8PbLPt06p72fnyuhD+dwH479py4mL1L8VX4m3AbvFzP4Cfd7auIpJnTD3fDckfm6A1kUckT/Rh//TIP0kY/xQR8Ud9EsU/EsuBsia8pO4T4IX0CdiI9DiW/Tj3oetnCs+IxgPTtAfnxL927qkbM6bYtnF99ootNc24cw2EiPGuFW1rQOSPTbiazKAGtJzrKzHSck72dpkLr4sXx9u2jesf5chd/fJcqujEcrHeOoxra6wV+WPFRyHy7Iz0ORUz8d1Q0XWmrHFuDBU5Q0XOu8RLcjQ1zZyNTvQih+dYju986XcoB3FsQHIGHcgJXFeZhiVnZMewQzv43bTp2A7MrxHJHoeRfXjrTEyQGB34n4fhX0ic8T0iOWDz4nOYt/9S9413MNlrm7wtEqL/AXh+4cZTsMcYHW9kP98ZZDwyurwvXS/+uzBB/JddAl9Dsh7y7Vdkawy2aL69q+q2Cv23wPNrN54qshNaQz/2aQ0xZ0BrKawJj9B+Fh/JO70PPkKZoluP6HGMPpS50vU2/+LouAd5GpCJc3wuxIo+qbIvIt9Nw/iu9f1J5I+NHudNN/rkHEv0q++tOgujz+GtOlf00eJs6S5MM2aon/BC3BIM1+4pvrtFSmvaea2dgXjmsW/ZPjzDNOzg31gQq5g2orF8t8Vwof/G9aF/M9MwXGRNjI6X/P7Sfpvoefwl9N+53vL73o01eYzdiM+M3amip6whVvJZK/lrwAZ843CMtXrBGuiRbKyVeQtesUf2pUI/98hGvXAvyz5V0+LTuDquiW8kf/uw1iV+2zgNoqMejJ1JVfeNFkekb+NLLY4zokffaZgW0xrW/5TWsJ4Y7zBPJX+xXnz4hrYKvmn3shj48r3sQuHry03tXMO649zEep3SGu7jWsY8PVXLms81zBX6H10vmIs1FRpzGRN8dz3b7qq6DUL/q+utv34ydZ+hPxlT0T+MqVgPHAfUm+MgduK5MPPYIPQ/u97y+wBq3zbEILEnMAYVGgYhbjAGLWAtVui5Zp4o9AugEZ/NiJ7rB7+RF8ZvQvSIKRo9vnmR/hfXW998FNX1Qxy8JN27wME56PynG6emmeP43vzN1O2egl2Pqa+/gOfvbtxlfQ1pDeuL/06LOBLivSk5iBiknX8908xZrIGE5v5wvfbe1O5COMfnsXavSpV9EfluEcZ3rd+bIn9sgp41uQ+TtHuR+OdJGH0O780rRR8tzvjexJihfsJLe2++beeG7+7aNkZtzw1+H2vnhobZjMvoV77zImZPaA0xWzAOMdt3ZrW9u6bAV36v1TCX36yij4b/fD4g/d8g7x+PPMZ/xHjG/7mip6wh3vL9Sos/3q84X7Saw5y4INmYS1ctePly9T2F/sojG/XCvSz7FC5odS++eRNv1tp5WNV946tj29r4UovjjOjRd4+t+wWtYT0xJmCeSv5ivUSmmS9aDXLda/WJd7uQcV3f/n8v2uvq+At2cOvDOtL3HAP+e5z4evOSet6vy/x+Wd6Xq/L582Jb8vtyL9v1kwDyy/XydntdbNfPVstyefOg/EPsquM61qltZ+5b7p5ML/wSoh87BjYvzqEG97SKPEv3vocuOtHveShz/ao+N6qa9HHVpBfZ46qpo6xNYA0xxLZz943+Ql6iR0L0Tx0DickQ9sj+mSJ/SPJreitziGHMK1bm8P+Szalu0Pau78p7mcQf51g3yZ0QdbVd3TzbFqsye5Hbz+vXXdc70ettuc7zT4r8RZGvHpL/HzDAJy+JLwAA",
  "debug_symbols": "5Z3dTuMwEIXfJde9iMf/vApCqEBBkaoWlbLSCvHuG1dN6DbdsSxF3ePpDSJ00n6HkDkndhy+mpfV0+fbY7d53X40d/dfzXr7vNx3202/9fW9aJ523XrdvT2e/rhp0xflDvUf78tN2vzYL3f75i66RbPavPTf+H7v1269au5s+/2waJQvrA+F9bGsntrCelVYT4X1urDeFNbbwvrC40uFx5cKjy8VHl998fgq0scdlLOneywmpdq3x1KjzVhKl0qJlD3WEmnNF1vjj7XWhNPSBK1qhKYaoXWN0KZGaFsjtKsR2tcIHWqEjhVCmxod0dToiAbVEd1Y6/4uTdCojshCozoiC43qiCw0qiOy0KiOyEKjOiILjeqIHLRFdUQWGtURWegaHdHW6Ii2Rke0NTqixXDERIJhc4kEw7sSCYYh9SQOw2USCYZ1JBIMP0gkGE0+kWB07kSC0Y4TCUyPdTA91sH0WAfTY/1V/2LtD4lz5yTXPDreDLXkbaZYuWBHhhDPsSMuthkYfEtn2KGtE1vViU11YltUbB+HQWQVlOOLvRve2DtzrhC26ZQojG7gjf68rQbY/jSXwgjbymZTCNv1ShSq1o8+2vpzH42wLXJGjfoGNJob0CjCFzMa3Q1o9DegUUTCyWgUkXFUO76zaifXmaoVEXNyIoUkHV6kkKjDixSSdXiR5hZECkk7vEghcYcXWWHeOXBXmGEO3BXmksStKowaB27Y9BD1yBDNlBs2EGS4L3u8D+Mxcqfch11M+S62fBdXvosv30XG0CrFYeBxMjuoSMbYKg0Xj9GYiUQRQZWXKCKm8hJFhFReooiIyksUMSDHTeUoEj/jqEj8lKPSMnwxDG8c48T6tYihOF6iiIE4XqKMdPNzLl6QaOS3GxnphpUoI92wEuWnGy0/3Wj56caIv6NKGRnphpUoI92wEqWlmwsSjXyJ8q3/qqu8NQ3UpLU9R7nq2u0MisJBuWaz1EqPKJSb0lXjopn+28mU7lWXWs/JbXC5xxURytOE21bK7Srl9pVyB1juMDz6sZ/dm5yXV13pXMRtSA0Mhia/bwfbvzPcsP07ww3bvzPcsP3b+rGfWD89L2H7d4Ybtn9nuGH7tzUn3GrCHevk9m2l3LB+meGG9csMN6xfZrhh/TLDjeuX8YdBTSYFPa5f8ty4fslz4/olz43rlyx3wPVLnhvXL3luXL/kuWH7oP65tVxb4ou5R3ioAHsKl0hkpw8i7Nk+n0TYxjCfRNgeUiKRX4qtImxAn1OkuQWRsNF/TpEi/DEnEvaiYk6RsFcgc4oUkXV4kdSKSDv8WmxqReSdnEghiYcXKSTx8CLNLYgUknh4kUISDy9SSOLhReImHjcum9dBTbhxQwzLrXBzCc+NGzV4btz0wHPjBgKe21TKDWvb7L1IpGCdOMMNa64Zbli/5LkJw3cOKCKudbhH3hDhdsEiif9+zAaRiHTMSxQxGshLlDHvyUnUMuY9WYni5z1JixgF5CXK8EVWogxfZB6WQlrE+B8vUcToHy9RRrphHnlDWka6YduN+Lu6yIi/q4uM/HRj5KcbIz/dXPUxG/9Joox0w0qUkW5YidLSzQWJ8tONFW793/3Wr+WuWz6tVx/9HunFz83zvttujpv73+/DK0+7br3u3h7fd9vn1cvnbvW43j6n15r2+OWeHC0o6If0TxXSptULsiFtpoBBwfevxv5T+0/+Aw==",
  "file_map": {
    "20": {
      "source": "use crate::default::Default;\nuse crate::hash::Hasher;\n\ncomptime global RATE: u32 = 3;\n\npub(crate) struct Poseidon2 {\n    cache: [Field; 3],\n    state: [Field; 4],\n    cache_size: u32,\n    squeeze_mode: bool, // 0 => absorb, 1 => squeeze\n}\n\nimpl Poseidon2 {\n    #[no_predicates]\n    pub(crate) fn hash<let N: u32>(input: [Field; N], message_size: u32) -> Field {\n        Poseidon2::hash_internal(input, message_size, message_size != N)\n    }\n\n    pub(crate) fn new(iv: Field) -> Poseidon2 {\n        let mut result =\n            Poseidon2 { cache: [0; 3], state: [0; 4], cache_size: 0, squeeze_mode: false };\n        result.state[RATE] = iv;\n        result\n    }\n\n    fn perform_duplex(&mut self) {\n        // add the cache into sponge state\n        for i in 0..RATE {\n            // We effectively zero-pad the cache by only adding to the state\n            // cache that is less than the specified `cache_size`\n            if i < self.cache_size {\n                self.state[i] += self.cache[i];\n            }\n        }\n        self.state = crate::hash::poseidon2_permutation(self.state, 4);\n    }\n\n    fn absorb(&mut self, input: Field) {\n        assert(!self.squeeze_mode);\n        if self.cache_size == RATE {\n            // If we're absorbing, and the cache is full, apply the sponge permutation to compress the cache\n            self.perform_duplex();\n            self.cache[0] = input;\n            self.cache_size = 1;\n        } else {\n            // If we're absorbing, and the cache is not full, add the input into the cache\n            self.cache[self.cache_size] = input;\n            self.cache_size += 1;\n        }\n    }\n\n    fn squeeze(&mut self) -> Field {\n        assert(!self.squeeze_mode);\n        // If we're in absorb mode, apply sponge permutation to compress the cache.\n        self.perform_duplex();\n        self.squeeze_mode = true;\n\n        // Pop one item off the top of the permutation and return it.\n        self.state[0]\n    }\n\n    fn hash_internal<let N: u32>(\n        input: [Field; N],\n        in_len: u32,\n        is_variable_length: bool,\n    ) -> Field {\n        let two_pow_64 = 18446744073709551616;\n        let iv: Field = (in_len as Field) * two_pow_64;\n        let mut sponge = Poseidon2::new(iv);\n        for i in 0..input.len() {\n            if i < in_len {\n                sponge.absorb(input[i]);\n            }\n        }\n\n        // In the case where the hash preimage is variable-length, we append `1` to the end of the input, to distinguish\n        // from fixed-length hashes. (the combination of this additional field element + the hash IV ensures\n        // fixed-length and variable-length hashes do not collide)\n        if is_variable_length {\n            sponge.absorb(1);\n        }\n        sponge.squeeze()\n    }\n}\n\npub(crate) struct Poseidon2Hasher {\n    _state: [Field],\n}\n\nimpl Hasher for Poseidon2Hasher {\n    fn finish(self) -> Field {\n        let iv: Field = (self._state.len() as Field) * 18446744073709551616; // iv = (self._state.len() << 64)\n        let mut sponge = Poseidon2::new(iv);\n        for i in 0..self._state.len() {\n            sponge.absorb(self._state[i]);\n        }\n        sponge.squeeze()\n    }\n\n    fn write(&mut self, input: Field) {\n        self._state = self._state.push_back(input);\n    }\n}\n\nimpl Default for Poseidon2Hasher {\n    fn default() -> Self {\n        Poseidon2Hasher { _state: &[] }\n    }\n}\n",
      "path": "std/hash/poseidon2.nr"
    },
    "50": {
      "source": "use std::hash::poseidon2;\n\nglobal len: u32 = 2450 * 2;\nfn main(x: Field) {\n    let ped_input = [x; len];\n    let mut val = poseidon2::Poseidon2::hash(ped_input, len);\n    assert(val != 0);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
