tooling/nargo_cli/tests/snapshots/execution_success/bench_2_to_17/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v2: Field):
    (no terminator instruction)
}
